SERVER-126801 DistinctScan with embedded FETCH returns IS_EOF after a WriteConflictException during fetch (#54113)

GitOrigin-RevId: c1457a681175da570d3c9119eabfde9c44e7c578